# WSCR-Rust-Axum

./: .gitignore  Cargo.toml  Dockerfile
app/: Cargo.toml
app/src/: main.rs
app/src/routes/: mod.rs
public/assets/: index-1fa9bdcb.js
src/: main.rs  runhub.rs
src/globals/: channels.rs  hash_maps.rs  mod.rs
src/models/: client.rs  mod.rs
src/routes/: mod.rs
src/routes/handlers/: mod.rs
