[package]
name = "wscr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws"] }
tokio = { version = "1.15.0", features = ["full"] }
lazy_static = "1.4.0"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["v4"] }
futures-util = { version = "0.3.28", features = [] }
axum_static = { version = "1.2.2" }
tower-http = { version = "0.4.3", features = ["full"]}
